# wolog2

./: .gitignore  Cargo.toml  flake.nix  module.nix  shell.nix
.sqlx/: query-99587db64dfa7005ca753a21c0ed08c87adbb752f7b9b5fbf60fa76ede9a9b8f.json  query-a131ce1faea064d6699c9a3627752fd2b139e01035e797a8c3d83f8ce8da87a2.json
articles/: test 2 copy.md  test.md
migrations/: 20241121030114_init.sql
src/: article.rs  db.rs  main.rs
src/article/: error.rs
src/filters/: mod.rs
static/: index.css  index.html
templates/: article.html.tera  frag-search-results.html.tera  homepage.html.tera  macros.html.tera  main.html.tera  page-list.html.tera  skeleton.html.tera  tag-directory.html.tera  tag-list.html.tera
