[package]
name = "wolog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.1.1"
atom_syndication = "0.12.4"
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.1.0"
lazy_static = "1.5.0"
pandoc_ast = "0.8.6"
reqwest = "0.12.9"
rocket = { version = "0.5.1", features = ["json"] }
# rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera", "handlebars"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
walkdir = "2.5.0"
